Adjusted grid styles for product page to prevent layout shift

--- a/src/components/product/product.module.scss
+++ b/src/components/product/product.module.scss
@@ -6,12 +6,8 @@
 
   @include abstracts.media-query('md') {
     padding: calc(1rem + 3vw);
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 3fr 20rem;
     gap: calc(1rem + 3vw);
-  }
-
-  @include abstracts.media-query('xl') {
-    grid-template-columns: 4fr 2fr;
   }
 
   &_info {
